--- a/trunk/TesseractOCR/.settings/org.eclipse.core.resources.prefs
+++ b/trunk/TesseractOCR/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//src/com/ocr/AspriseOCR.java=UTF-8
 encoding//src/com/ocr/ImageFilter.java=UTF-8
+encoding//src/com/ocr/MyImgFilter.java=UTF-8
