--- a/TesseractOCR/.classpath
+++ b/TesseractOCR/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="lib" path="lib/swingx-all-1.6.4.jar"/>
 	<classpathentry kind="lib" path="lib/aspriseOCR.jar"/>
 	<classpathentry kind="lib" path="lib/commons-io-1.4.jar"/>
+	<classpathentry kind="lib" path="lib/jai_codec.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
